Fixed spacing on search clear button

--- a/client/src/styles/dark-mode.scss
+++ b/client/src/styles/dark-mode.scss
@@ -34,6 +34,7 @@ body.dark {
 
       .list-item:hover {
         color: $dark-text !important;
+        font-weight: 800;
       }
     }
 
